[gd_scene load_steps=36 format=3 uid="uid://c7t6u5kxlat4l"]

[ext_resource type="Script" path="res://characters/slime/slime.gd" id="1_lslds"]
[ext_resource type="Texture2D" uid="uid://c2e2tyta520xl" path="res://resources/characters/Slime/Slime with shadows/Slime-Attack01.png" id="2_wh4y6"]
[ext_resource type="Texture2D" uid="uid://bjgw8qoej3wg7" path="res://resources/characters/Slime/Slime with shadows/Slime-Death.png" id="3_24vir"]
[ext_resource type="Texture2D" uid="uid://dv5lfqci1yltj" path="res://resources/characters/Slime/Slime with shadows/Slime-Hurt.png" id="4_i18ki"]
[ext_resource type="Texture2D" uid="uid://ddpelai4o5c42" path="res://resources/characters/Slime/Slime with shadows/Slime-Idle.png" id="5_igoko"]
[ext_resource type="Texture2D" uid="uid://7qsghjdk67cn" path="res://resources/characters/Slime/Slime with shadows/Slime-Walk.png" id="6_plm15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dssag"]
atlas = ExtResource("2_wh4y6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hesjm"]
atlas = ExtResource("2_wh4y6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnraa"]
atlas = ExtResource("2_wh4y6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8wjd"]
atlas = ExtResource("2_wh4y6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhvto"]
atlas = ExtResource("2_wh4y6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn5tx"]
atlas = ExtResource("2_wh4y6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqhye"]
atlas = ExtResource("3_24vir")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms402"]
atlas = ExtResource("3_24vir")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jnno"]
atlas = ExtResource("3_24vir")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx2c5"]
atlas = ExtResource("3_24vir")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yrh8"]
atlas = ExtResource("4_i18ki")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_41pbf"]
atlas = ExtResource("4_i18ki")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsqhc"]
atlas = ExtResource("4_i18ki")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rcty"]
atlas = ExtResource("4_i18ki")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_420dy"]
atlas = ExtResource("5_igoko")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd80b"]
atlas = ExtResource("5_igoko")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuqsd"]
atlas = ExtResource("5_igoko")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_71hiq"]
atlas = ExtResource("5_igoko")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofb5a"]
atlas = ExtResource("5_igoko")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4huy"]
atlas = ExtResource("5_igoko")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oyl6"]
atlas = ExtResource("6_plm15")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_it072"]
atlas = ExtResource("6_plm15")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejg70"]
atlas = ExtResource("6_plm15")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_txjrl"]
atlas = ExtResource("6_plm15")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l77e1"]
atlas = ExtResource("6_plm15")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubdfp"]
atlas = ExtResource("6_plm15")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_pl01k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dssag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hesjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnraa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8wjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn5tx")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqhye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms402")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jnno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx2c5")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yrh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41pbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsqhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rcty")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_420dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd80b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuqsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71hiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofb5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4huy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oyl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it072")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejg70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txjrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l77e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubdfp")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dflxr"]
radius = 69.1158

[sub_resource type="CircleShape2D" id="CircleShape2D_hye7p"]

[node name="slime" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
script = ExtResource("1_lslds")

[node name="slime_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_pl01k")
animation = &"walk"

[node name="detection_area" type="Area2D" parent="slime_animation"]
position = Vector2(2, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_animation/detection_area"]
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_dflxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hye7p")

[connection signal="body_entered" from="slime_animation/detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="slime_animation/detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_shape_entered" from="slime_animation/detection_area" to="." method="_on_detection_area_body_shape_entered"]
